fix(shs-6045): margin in vertical linked cards when there's no img and title, and image overlapping in vertical button card

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_vertical-button-card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_vertical-button-card.scss
@@ -130,7 +130,8 @@
       .hb-card__content {
         padding-top: hb-calculate-rems(62px);
 
-        .hb-raised-cards & {
+        .hb-raised-cards &,
+        .field-hs-collection-items.item-per-row--4 & {
           padding-top: hb-calculate-rems(62px);
         }
       }
