--- a/docroot/themes/humsci/humsci_basic/src/scss/utilities/_raised-cards.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/utilities/_raised-cards.scss
@@ -228,7 +228,7 @@
 }
 
 // Update padding when vertical card is in 4 columns.
-.hb-raised-cards .field-hs-collection-items.item-per-row--4 .hb-card .hb-card__content {
+.hb-raised-cards .field-hs-collection-items.item-per-row--4 .hb-vertical-card .hb-card__content {
   @include hb-colorful {
     padding: hb-calculate-rems(18px);
   }
